test/parserTest/fail/test5.ic
class IllegalVisibility {
	private int x;
	
}